--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,5 +15,5 @@
 	},
 	"include": ["src/"],
 	"exclude": ["node_modules", "dist"],
-	"references": [{ "path": "../email" }, { "path": "../../packages/ui" }]
+	"references": [{ "path": "../../packages/ui" }]
 }
