--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "@mattrax/monorepo",
 	"private": true,
-	"workspaces": ["apps/*", "packages/*"],
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"scripts": {
 		"dev": "pnpm --filter @mattrax/web dev",
 		"landing": "pnpm --filter @mattrax/landing --",
@@ -43,7 +46,8 @@
 		"patchedDependencies": {
 			"@solidjs/router@0.13.2": "patches/@solidjs__router@0.13.2.patch",
 			"@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch",
-			"drizzle-orm@0.30.8": "patches/drizzle-orm@0.30.8.patch"
+			"drizzle-orm@0.30.8": "patches/drizzle-orm@0.30.8.patch",
+			"@react-email/tailwind@0.0.15": "patches/@react-email__tailwind@0.0.15.patch"
 		}
 	}
 }
