--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,5 +15,8 @@
 	},
 	"include": ["src/"],
 	"exclude": ["node_modules", "dist"],
-	"references": [{ "path": "../../packages/ui" }]
+	"references": [
+		{ "path": "../../packages/ui" },
+		{ "path": "../../packages/email" }
+	]
 }
