--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
 		"@solid-primitives/event-bus": "^1.0.11",
 		"@solid-primitives/event-listener": "^2.3.3",
 		"@solid-primitives/lifecycle": "^0.0.102",
+		"@solid-primitives/map": "^0.4.11",
 		"@solid-primitives/memo": "^1.3.8",
 		"@solid-primitives/scheduled": "^1.4.3",
 		"@solid-primitives/storage": "^3.3.0",
