Styled OTP input

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,6 +61,7 @@
 		"drizzle-orm": "^0.30.8",
 		"h3": "^1.11.1",
 		"hono": "^4.2.5",
+		"input-otp": "^1.2.4",
 		"jose": "^5.2.4",
 		"lucia": "^3.1.1",
 		"oslo": "^1.2.0",
@@ -69,6 +70,7 @@
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
 		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"solid-js": "^1.8.16",
 		"solid-sonner": "^0.2.6",
 		"stripe": "^15.3.0",
@@ -86,6 +88,7 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/prismjs": "^1.26.3",
 		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
 		"autoprefixer": "^10.4.19",
 		"mysql2": "^3.9.7",
 		"postcss": "^8.4.38",
