cache orgs + tenants in indexeddb

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
 		"clsx": "^2.1.0",
 		"codejar": "^4.2.0",
 		"cookie-es": "^1.1.0",
+		"dexie": "^4.0.4",
 		"drizzle-orm": "^0.30.8",
 		"h3": "^1.11.1",
 		"hono": "^4.2.5",
