--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   changes:
+    name: Detect changes
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
@@ -38,7 +39,7 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
@@ -52,9 +53,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: changes
     if: ${{ needs.changes.outputs.updater == 'true' }}
-    # TODO: Build for macOS, Linux, and Windows
+    strategy:
+      matrix:
+        # TODO: Build for macOS, Linux, and Windows
+        target: [unknown-linux-gnu, apple-darwin, windows-gnu]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@stable
 
@@ -79,11 +83,17 @@ jobs:
           tar -xf cargo-zigbuild-*.tar.gz
           mv cargo-zigbuild /usr/local/bin
 
-      - name: Add 'aarch64-unknown-linux-gnu' target
-        run: rustup target add aarch64-unknown-linux-gnu
+      - name: Add 'aarch64-${{ matrix.target }}' target
+        run: rustup target add aarch64-${{ matrix.target }}
 
-      - name: Build Rust
-        run: cargo zigbuild --locked --release --target aarch64-unknown-linux-gnu
+      - name: Add 'x86_64-${{ matrix.target }}' target
+        run: rustup target add x86_64-${{ matrix.target }}
+
+      - name: Build (x86_64)
+        run: cargo zigbuild --locked --release --target aarch64-${{ matrix.target }}
+
+      - name: Build (arm64)
+        run: cargo zigbuild --locked --release --target x86_64-${{ matrix.target }}
 
       # TODO: Upload to R2
 
@@ -93,3 +103,5 @@ jobs:
     needs: rust
     steps:
       - run: echo "Hello World"
+
+  # TODO: Cloudflare workers deploy
