--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -54,8 +54,8 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.updater == 'true' }}
     strategy:
+      fail-fast: false
       matrix:
-        fail-fast: false
         target:
           [
             aarch64-unknown-linux-gnu,
@@ -103,6 +103,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: rust
     steps:
+      - run: echo "Hello World"
+
+      # TODO: Trigger Rust deploy and wait for it to finish (so we know migrations have run)
+
+  cloudflare:
+    name: Cloudflare
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      # TODO: Deploy `apps/web`
       - run: echo "Hello World"
 
   # TODO: Cloudflare workers deploy
