--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -88,6 +88,9 @@ jobs:
         with:
           cache-on-failure: "true"
 
+      - name: OpenSSL
+        run: sudo apt-get install -y libssl-dev
+
       - name: Install Zig toolchain
         uses: korandoru/setup-zig@v1
         with:
