--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -51,3 +51,4 @@ sha2 = "0.10.8"
 x509-parser = "0.16.0"
 mysql_async = { version = "0.34.1", default-features = false }
 refinery = { version = "0.8.14", features = ["mysql_async"] }
+openssl = { version = "0.10.35", features = ["vendored"] }
