--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -24,7 +24,7 @@
 		"@tanstack/solid-form": "=0.19.0",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.16",
-		"vinxi": "=0.3.10",
+		"vinxi": "^0.3.11",
 		"vite": "^5.2.9",
 		"zod": "^3.22.5"
 	}
