--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -79,7 +79,7 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "^3.4.3",
 		"ts-pattern": "^5.1.1",
-		"vinxi": "=0.3.10",
+		"vinxi": "^0.3.11",
 		"xml2js": "^0.6.2",
 		"zod": "^3.22.5"
 	},
