--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"husky": "^9.0.11"
 	},
 	"resolutions": {
+		"@solidjs/start": "=0.7.7",
 		"vinxi": "=0.3.10",
 		"drizzle-orm": "^0.30.8"
 	},
