--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -16,3 +16,4 @@ mysql_common = { version = "=0.31.0", features = [
 ] } # This is a dependency of `mysql_async`
 chrono = { version = "0.4.35", features = ["serde"] }
 serde_json = "1.0.114"
+refinery = { version = "0.8.14", features = ["mysql_async"] }
