--- a/crates/ms-ddf/Cargo.toml
+++ b/crates/ms-ddf/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "ms-dff"
+name = "ms-ddf"
 version = "0.0.1"
 edition = "2021"
 publish = false
 
 [dependencies]
+easy-xml = "0.1.4"
+easy-xml-derive = "0.1.4"
