--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 resolver = "2"
-members = ["apps/mattrax", "apps/mattraxd", "apps/mttx", "crates/*"]
+members = [
+  "apps/ingest",
+  "apps/mattrax",
+  "apps/mattraxd",
+  "apps/mttx",
+  "crates/*",
+]
 
 [workspace.metadata.dist]
 cargo-dist-version = "0.12.0"
@@ -8,11 +14,11 @@ ci = ["github"]
 installers = ["shell", "powershell", "homebrew"]
 tap = "mattrax/homebrew-tap"
 targets = [
-    "aarch64-apple-darwin",
-    "x86_64-apple-darwin",
-    "x86_64-unknown-linux-gnu",
-    "x86_64-unknown-linux-musl",
-    "x86_64-pc-windows-msvc",
+  "aarch64-apple-darwin",
+  "x86_64-apple-darwin",
+  "x86_64-unknown-linux-gnu",
+  "x86_64-unknown-linux-musl",
+  "x86_64-pc-windows-msvc",
 ]
 publish-jobs = ["homebrew"]
 pr-run-mode = "plan"
