--- a/apps/ingest/Cargo.toml
+++ b/apps/ingest/Cargo.toml
@@ -10,3 +10,4 @@ ms-ddf = { path = "../../crates/ms-ddf" }
 profile-manifests = { path = "../../crates/profile-manifests" }
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
+specta = { workspace = true, features = ["typescript"] }
