configuration-schemas and policy-composer

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,8 +18,10 @@
 		"@kobalte/core": "^0.12.6",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@mattrax/configuration-schemas": "workspace:*",
 		"@mattrax/drizzle-to-rs": "workspace:*",
 		"@mattrax/ms-graph": "workspace:*",
+		"@mattrax/policy-composer": "workspace:*",
 		"@mattrax/trpc-server-function": "workspace:^",
 		"@mattrax/ui": "workspace:*",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
