Improve `paths` for Vercel landing deploy

--- a/.github/workflows/vercel-landing.yaml
+++ b/.github/workflows/vercel-landing.yaml
@@ -5,10 +5,14 @@ on:
     branches: [main]
     paths:
       - "apps/landing/**"
+      - package.json
+      - pnpm-lock.yaml
   pull_request:
     branches: [main]
     paths:
       - "apps/landing/**"
+      - package.json
+      - pnpm-lock.yaml
   workflow_dispatch:
 
 jobs:
