--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
 		"@mattrax/configuration-schemas": "workspace:*",
 		"@mattrax/drizzle-to-rs": "workspace:*",
 		"@mattrax/ms-graph": "workspace:*",
+		"@mattrax/mysql-planetscale": "workspace:*",
 		"@mattrax/policy-composer": "workspace:*",
 		"@mattrax/trpc-server-function": "workspace:^",
 		"@mattrax/ui": "workspace:*",
