--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -53,3 +53,4 @@ mysql_async = { version = "0.34.1", default-features = false }
 openssl = { version = "0.10.35", features = ["vendored"] }
 arc-swap = "1.7.1"
 rand = "0.8.5"
+libc = "0.2.154"
