apple schemas + nesting in windows schemas

--- a/packages/configuration-schemas/package.json
+++ b/packages/configuration-schemas/package.json
@@ -10,6 +10,13 @@
 		},
 		"./windows/ddf.json": {
 			"import": "./src/windows/ddf.json"
+		},
+		"./apple": {
+			"import": "./src/apple/payloads.ts",
+			"types": "./src/apple/payloads.ts"
+		},
+		"./apple/payloads.json": {
+			"import": "./src/apple/payloads.json"
 		}
 	}
 }
