--- a/apps/ingest/Cargo.toml
+++ b/apps/ingest/Cargo.toml
@@ -7,7 +7,8 @@ publish = false
 [dependencies]
 easy-xml = "0.1.4"
 ms-ddf = { path = "../../crates/ms-ddf" }
-profile-manifests = { path = "../../crates/profile-manifests" }
+apple-pfm = { path = "../../crates/apple-pfm" }
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
 specta = { workspace = true, features = ["typescript"] }
+glob = "0.3.1"
