--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,7 @@ easy-xml = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc
 easy-xml-derive = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc85802e434274400865a9ba8dbc2313f1" }
 
 # Support for latest mysql-async
-refinery-core = { git = "https://github.com/oscartbeaumont/refinery.git", rev = "03744dc3257ae734a9d2f305e59b95485da53468" }
+refinery-core = { git = "https://github.com/oscartbeaumont/refinery", rev = "03744dc3257ae734a9d2f305e59b95485da53468" }
+
+# https://github.com/zkat/chownr-rs/pull/1
+chownr = { git = "https://github.com/oscartbeaumont/chownr-rs", rev = "05101de6d2eb27a18374688f9339772aff827f85" }
