--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,28 +8,19 @@ members = [
   "crates/*",
 ]
 
-[workspace.metadata.dist]
-cargo-dist-version = "0.12.0"
-ci = ["github"]
-installers = ["shell", "powershell", "homebrew"]
-tap = "mattrax/homebrew-tap"
-targets = [
-  "aarch64-apple-darwin",
-  "x86_64-apple-darwin",
-  "x86_64-unknown-linux-gnu",
-  "x86_64-unknown-linux-musl",
-  "x86_64-pc-windows-msvc",
-]
-publish-jobs = ["homebrew"]
-pr-run-mode = "plan"
-install-updater = true
-
 [profile.dist]
 inherits = "release"
 lto = "thin"
 
 [workspace.dependencies]
-specta = { version = "=2.0.0-rc.7" }
+serde = { version = "^1", features = ["derive"] }
+serde_json = { version = "^1" }
+specta = { version = "=2.0.0-rc.11", features = [
+  "typescript",
+  "serde_json",
+  "chrono",
+  "rust_decimal",
+] }
 
 [patch.crates-io]
 # TODO: This is likely a security risk, will fix it properly once the MVP is out.
