--- a/apps/ingest/Cargo.toml
+++ b/apps/ingest/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 easy-xml = "0.1.4"
 ms-ddf = { path = "../../crates/ms-ddf" }
 apple-pfm = { path = "../../crates/apple-pfm" }
-serde = { version = "1.0.199", features = ["derive"] }
-serde_json = "1.0.116"
-specta = { workspace = true, features = ["typescript"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+specta = { workspace = true }
 glob = "0.3.1"
