--- a/crates/mx-policy/Cargo.toml
+++ b/crates/mx-policy/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 name = "mx-policy"
+description = "Core definition for policy data model"
 version = "0.0.1"
 edition = "2021"
 repository = "https://github.com/mattrax/Mattrax"
 publish = false
 
 [dependencies]
-mx-dmvalue = { path = "../dmvalue" }
-
-serde = { version = "1.0.197", features = ["derive"] }
-specta = { workspace = true, features = [
-    "typescript",
-    "chrono",
-    "rust_decimal",
-] }
+specta = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 chrono = { version = "0.4.37", features = ["serde"] }
 rust_decimal = "1.35.0"
