--- a/crates/windows/Cargo.toml
+++ b/crates/windows/Cargo.toml
@@ -6,14 +6,13 @@ publish = false
 
 [dependencies]
 mx-db = { path = "../db" }
-mx-policy = { path = "../policy" }
+mx-policy = { path = "../mx-policy" }
 mx-conflict = { path = "../conflict" }
 ms-mdm = { path = "../ms-mdm" }
 ms-mde = { path = "../ms-mde" }
-mx-dmvalue = { path = "../dmvalue" }
 
-serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.115"
+serde = { workspace = true }
+serde_json = { workspace = true }
 tracing = "0.1.40"
 rustls = "0.23.4"
 x509-parser = { version = "0.16.0", features = ["verify"] }
