--- a/crates/windows/Cargo.toml
+++ b/crates/windows/Cargo.toml
@@ -16,6 +16,4 @@ serde_json = { workspace = true }
 tracing = "0.1.40"
 rustls = "0.23.4"
 x509-parser = { version = "0.16.0", features = ["verify"] }
-futures = { version = "0.3.30", no-default-features = true, features = [
-    "async-await",
-] }
+futures = { version = "0.3.30", features = ["async-await"] }
