--- a/crates/mx-windows/Cargo.toml
+++ b/crates/mx-windows/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 publish = false
 
 [dependencies]
-mx-db = { path = "../db" }
+mx-db = { path = "../mx-db" }
 mx-policy = { path = "../mx-policy" }
-mx-conflict = { path = "../conflict" }
+mx-conflict = { path = "../mx-conflict" }
 ms-mdm = { path = "../ms-mdm" }
 ms-mde = { path = "../ms-mde" }
 
