--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -10,11 +10,11 @@ default-run = "mattrax"
 dist = true
 
 [dependencies]
-mx-utils = { path = "../../crates/utils" }
+mx-utils = { path = "../../crates/mx-utils" }
 better-acme = { path = "../../crates/better-acme" }
 ms-mde = { path = "../../crates/ms-mde" }
-mx-windows = { path = "../../crates/windows" }
-mx-db = { path = "../../crates/db" }
+mx-windows = { path = "../../crates/mx-windows" }
+mx-db = { path = "../../crates/mx-db" }
 
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -27,10 +27,10 @@ tower = "0.4.13"
 hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
 tokio-util = { version = "0.7.10", features = ["compat"] }
 hyper-util = { version = "0.1.3", features = [
-    "http1",
-    "http2",
-    "server-auto",
-    "tokio",
+  "http1",
+  "http2",
+  "server-auto",
+  "tokio",
 ] }
 thiserror = "1.0.58"
 serde = { workspace = true }
