--- a/apps/mattraxd/Cargo.toml
+++ b/apps/mattraxd/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 dist = true
 
 [dependencies]
-mx-utils = { path = "../../crates/utils" }
+mx-utils = { path = "../../crates/mx-utils" }
 
 clap = { version = "4.5.3", features = ["derive"] }
 tracing-subscriber = "0.3.18"
