--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,5 +16,8 @@
 	},
 	"include": ["src/"],
 	"exclude": ["node_modules", "dist"],
-	"references": [{ "path": "../../packages/ui" }]
+	"references": [
+		{ "path": "../../packages/ui" },
+		{ "path": "../../packages/trpc-server-function" }
+	]
 }
