--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 			"@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch",
 			"drizzle-orm@0.30.8": "patches/drizzle-orm@0.30.8.patch",
 			"@react-email/tailwind@0.0.15": "patches/@react-email__tailwind@0.0.15.patch",
-			"nitropack@2.9.6": "patches/nitropack@2.9.6.patch"
+			"nitropack@2.9.6": "patches/nitropack@2.9.6.patch",
+			"@solid-mediakit/trpc@3.0.2": "patches/@solid-mediakit__trpc@3.0.2.patch"
 		}
 	}
 }
