--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -7,12 +7,15 @@
 	"types": "./src/index.ts",
 	"exports": {
 		".": "./src/index.ts",
-		"./server": "./src/server.ts"
+		"./server": "./src/server.ts",
+		"./client": "./src/client.ts"
 	},
 	"dependencies": {
 		"@kobalte/core": "^0.12.6",
+		"@solid-mediakit/trpc": "^3.0.2",
 		"@solidjs/router": "^0.13.2",
 		"@tanstack/form-core": "=0.19.0",
+		"@tanstack/query-core": "^5.32.1",
 		"@tanstack/solid-form": "=0.19.0",
 		"@tanstack/zod-form-adapter": "=0.19.0",
 		"@trpc/client": "^10.45.2",
