--- a/packages/policy-composer/package.json
+++ b/packages/policy-composer/package.json
@@ -11,6 +11,7 @@
 		}
 	},
 	"dependencies": {
+		"@kobalte/core": "^0.12.6",
 		"@mattrax/configuration-schemas": "workspace:*",
 		"@mattrax/ui": "workspace:*",
 		"solid-js": "^1.8.16"
