--- a/packages/policy-composer/tsconfig.json
+++ b/packages/policy-composer/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./dist"
+		"outDir": "./dist",
+		"types": ["@mattrax/ui/types"]
 	},
 	"include": ["src/"],
 	"exclude": ["node_modules", "dist"]
