separate email package (#272)
* separate email package

* jsxImportSource

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,6 +18,7 @@
 	"exclude": ["node_modules", "dist"],
 	"references": [
 		{ "path": "../../packages/ui" },
+		{ "path": "../../packages/email" },
 		{ "path": "../../packages/trpc-server-function" }
 	]
 }
