--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@mattrax/configuration-schemas": "workspace:*",
 		"@mattrax/drizzle-to-rs": "workspace:*",
+		"@mattrax/email": "workspace:*",
 		"@mattrax/ms-graph": "workspace:*",
 		"@mattrax/mysql-planetscale": "workspace:*",
 		"@mattrax/policy-composer": "workspace:*",
@@ -28,9 +29,6 @@
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.16.0",
-		"@react-email/components": "0.0.16",
-		"@react-email/render": "^0.0.12",
-		"@react-email/tailwind": "^0.0.15",
 		"@solid-mediakit/trpc": "^3.0.2",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/date": "^2.0.21",
