--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
 PROD_URL=http://localhost:3000
 MDM_URL=http://localhost:8005
 EMAIL_URL=http://localhost:3002
-DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
+PLANETSCALE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 # Syncing users
