--- a/infra/package.json
+++ b/infra/package.json
@@ -2,7 +2,11 @@
 	"name": "@mattrax/infra",
 	"private": true,
 	"devDependencies": {
-		"@pulumi/aws": "^6.27.0",
-		"@pulumi/azuread": "^5.47.2"
+		"@pulumi/aws": "^6.36.0",
+		"@pulumi/azuread": "^5.49.1"
+	},
+	"dependencies": {
+		"@pulumi/cloudflare": "^5.28.0",
+		"@pulumi/pulumi": "^3.116.1"
 	}
 }
