--- a/.github/workflows/sst.yaml
+++ b/.github/workflows/sst.yaml
@@ -20,21 +20,6 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v3
 
-      # - name: Configure Azure credentials
-      #   uses: azure/login@v1
-      #   with:
-      #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      #     allow-no-subscriptions: true
-
-      # TODO: We don't use OIDC because I can't work out the permissions.
-      # - How tf do you make an app registration global administrator. That doesn't even makes sense.
-      - name: Configure Azure credentials
-        run: az login --username "$AZURE_USERNAME" --password "$AZURE_APP_SPECIFIC_PASSWORD"
-        env:
-          AZURE_USERNAME: ${{ secrets.AZURE_USERNAME }}
-          AZURE_APP_SPECIFIC_PASSWORD: ${{ secrets.AZURE_APP_SPECIFIC_PASSWORD }}
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -49,5 +34,14 @@ jobs:
       - name: Install SST
         run: curl -fsSL https://ion.sst.dev/install | bash
 
-      - name: Deploy app
-        run: pnpm i && PATH=/home/runner/.sst/bin:$PATH pnpm infra deploy --stage prod
+      - run: pnpm i
+
+      - run: sst deploy
+        env:
+          ARM_USE_OIDC: true
+          ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
+          CLOUDFLARE_DEFAULT_ACCOUNT_ID: ${{ vars.CLOUDFLARE_DEFAULT_ACCOUNT_ID }}
+          CLOUDFLARE_EMAIL: ${{ vars.CLOUDFLARE_EMAIL }}
+          CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
