--- a/.github/workflows/sst.yaml
+++ b/.github/workflows/sst.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - run: pnpm i
 
-      - run: cd infra && sst deploy --stage brendan
+      - run: cd infra && sst deploy --stage brendonovich
         env:
           ARM_USE_OIDC: true
           ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
