--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -8,24 +8,24 @@
 		"start": "vinxi start"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.202",
+		"@iconify/json": "^2.2.211",
 		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.12",
+		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.19",
 		"tailwindcss": "^3.4.3"
 	},
 	"dependencies": {
-		"@fontsource-variable/inter": "^5.0.17",
-		"@fontsource/inter": "^5.0.17",
-		"@kobalte/core": "^0.12.6",
+		"@fontsource-variable/inter": "^5.0.18",
+		"@fontsource/inter": "^5.0.18",
+		"@kobalte/core": "^0.13.1",
 		"@mattrax/ui": "workspace:*",
-		"@solidjs/router": "^0.13.2",
-		"@solidjs/start": "1.0.0-rc.0",
-		"@tanstack/solid-form": "=0.19.0",
+		"@solidjs/router": "^0.13.3",
+		"@solidjs/start": "1.0.0-rc.1",
+		"@tanstack/solid-form": "^0.19.5",
 		"h3": "^1.11.1",
-		"solid-js": "^1.8.16",
-		"vinxi": "=0.3.10",
-		"vite": "^5.2.9",
-		"zod": "^3.22.5"
+		"solid-js": "^1.8.17",
+		"vinxi": "=0.3.11",
+		"vite": "^5.2.11",
+		"zod": "^3.23.8"
 	}
 }
