--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,22 +16,22 @@
 		"./css": "./src/index.css"
 	},
 	"dependencies": {
-		"@kobalte/core": "^0.12.6",
-		"@solidjs/router": "^0.13.2",
-		"@tanstack/form-core": "=0.19.0",
-		"@tanstack/solid-form": "=0.19.0",
-		"@tanstack/zod-form-adapter": "=0.19.0",
+		"@kobalte/core": "^0.13.1",
+		"@solidjs/router": "^0.13.3",
+		"@tanstack/form-core": "^0.19.5",
+		"@tanstack/solid-form": "^0.19.5",
+		"@tanstack/zod-form-adapter": "^0.19.5",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"solid-js": "^1.8.16",
+		"clsx": "^2.1.1",
+		"solid-js": "^1.8.17",
 		"tailwind-merge": "^2.3.0",
-		"zod": "^3.22.5"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.202",
-		"unplugin-auto-import": "^0.17.5",
-		"unplugin-icons": "^0.18.5",
-		"vite": "^5.2.9",
+		"@iconify/json": "^2.2.211",
+		"unplugin-auto-import": "^0.17.6",
+		"unplugin-icons": "^0.19.0",
+		"vite": "^5.2.11",
 		"vite-plugin-solid": "^2.10.2"
 	}
 }
