--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
 			},
 			"style": {
 				"noNonNullAssertion": "off"
+			},
+			"correctness": {
+				"useJsxKeyInIterable": "off"
 			}
 		}
 	},
