--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -38,7 +38,7 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"remark-mdx": "^3.0.1",
-		"shiki": "^1.5.2",
+		"shiki": "=0.14.7",
 		"simple-functional-loader": "^1.2.1",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.4.5",
