only run sst on main branch

--- a/.github/workflows/sst.yaml
+++ b/.github/workflows/sst.yaml
@@ -1,5 +1,8 @@
 name: SST Deploy
-on: push # TODO: Only on prod
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: "merge-${{ github.ref }}"
