--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 packages:
-    - apps/*
-    - apps/web/.react-email
-    - packages/*
+  - apps/*
+  - packages/*
+  - apps/email/.react-email
+  - infra
