--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -36,7 +36,7 @@ thiserror = "1.0.60"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = "0.1.15"
-getrandom = "=0.2.14" # https://github.com/rust-random/getrandom/issues/423
+getrandom = "0.2.15"
 rcgen = { version = "0.13.1", features = ["x509-parser"] }
 base64 = "0.22.1"
 sha1 = "0.10.6"
