--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
 	"name": "@mattrax/monorepo",
 	"private": true,
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
+	"workspaces": ["apps/*", "packages/*"],
 	"scripts": {
 		"dev": "pnpm --filter @mattrax/web dev",
 		"landing": "pnpm --filter @mattrax/landing --",
@@ -52,7 +49,8 @@
 			"@react-email/tailwind@0.0.16": "patches/@react-email__tailwind@0.0.16.patch",
 			"nitropack@2.9.6": "patches/nitropack@2.9.6.patch",
 			"@solid-mediakit/trpc@3.0.2": "patches/@solid-mediakit__trpc@3.0.2.patch",
-			"@solidjs/start@0.7.7": "patches/@solidjs__start@0.7.7.patch"
+			"@solidjs/start@0.7.7": "patches/@solidjs__start@0.7.7.patch",
+			"vinxi@0.3.11": "patches/vinxi@0.3.11.patch"
 		}
 	}
 }
