--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -18,39 +18,39 @@ mx-db = { path = "../../crates/mx-db" }
 
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-clap = { version = "4.5.3", features = ["derive"] }
-axum = { version = "0.7.4", features = ["http2", "macros", "ws"] }
-rustls = "=0.22.2" # TODO: Upgrade
-futures-rustls = "0.25.1"
+tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+clap = { version = "4.5.4", features = ["derive"] }
+axum = { version = "0.7.5", features = ["http2", "macros", "ws"] }
+rustls = "0.23.6"
+futures-rustls = "0.26.0"
 tower = "0.4.13"
-hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
-tokio-util = { version = "0.7.10", features = ["compat"] }
+hyper = { version = "1.3.1", features = ["http1", "http2", "server"] }
+tokio-util = { version = "0.7.11", features = ["compat"] }
 hyper-util = { version = "0.1.3", features = [
   "http1",
   "http2",
   "server-auto",
   "tokio",
 ] }
-thiserror = "1.0.58"
+thiserror = "1.0.60"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = "0.1.15"
-getrandom = "0.2.12"
-rcgen = { version = "=0.13.0", features = ["x509-parser"] }
-base64 = "0.22.0"
+getrandom = "0.2.15"
+rcgen = { version = "0.13.1", features = ["x509-parser"] }
+base64 = "0.22.1"
 sha1 = "0.10.6"
 hex = "0.4.3"
 futures = { version = "0.3.30", default-features = false }
 cuid2 = "0.1.2"
-time = "0.3.34"
+time = "0.3.36"
 urlencoding = "2.1.3"
 hmac = "0.12.1"
 jwt = "0.16.0"
 sha2 = "0.10.8"
 x509-parser = "0.16.0"
 mysql_async = { version = "0.34.1", default-features = false }
-openssl = { version = "0.10.35", features = ["vendored"] }
+openssl = { version = "0.10.64", features = ["vendored"] }
 arc-swap = "1.7.1"
 rand = "0.8.5"
 nix = { version = "0.28.0", features = ["user"] }
