--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
 	},
 	"dependencies": {
 		"@hono/zod-validator": "^0.2.1",
-		"@kobalte/core": "^0.12.6",
+		"@kobalte/core": "^0.13.1",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@mattrax/configuration-schemas": "workspace:*",
@@ -28,7 +28,7 @@
 		"@mattrax/ui": "workspace:*",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
-		"@planetscale/database": "^1.16.0",
+		"@planetscale/database": "^1.18.0",
 		"@solid-mediakit/trpc": "^3.0.2",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/date": "^2.0.21",
@@ -38,58 +38,57 @@
 		"@solid-primitives/map": "^0.4.11",
 		"@solid-primitives/memo": "^1.3.8",
 		"@solid-primitives/scheduled": "^1.4.3",
-		"@solid-primitives/storage": "^3.3.0",
+		"@solid-primitives/storage": "^3.5.0",
 		"@solid-primitives/timer": "^1.3.9",
-		"@solidjs/router": "^0.13.2",
-		"@solidjs/start": "1.0.0-rc.0",
-		"@t3-oss/env-core": "^0.9.2",
-		"@tanstack/query-broadcast-client-experimental": "^5.29.0",
-		"@tanstack/solid-form": "=0.19.0",
-		"@tanstack/solid-query": "^5.35.1",
-		"@tanstack/solid-query-devtools": "^5.35.1",
-		"@tanstack/solid-query-persist-client": "^5.30.6",
-		"@tanstack/solid-table": "^8.16.1",
-		"@tanstack/zod-form-adapter": "=0.19.0",
+		"@solidjs/router": "=0.13.3",
+		"@solidjs/start": "1.0.0-rc.1",
+		"@t3-oss/env-core": "^0.10.1",
+		"@tanstack/solid-form": "^0.19.5",
+		"@tanstack/solid-query": "^5.36.1",
+		"@tanstack/solid-query-devtools": "^5.36.1",
+		"@tanstack/solid-query-persist-client": "^5.36.1",
+		"@tanstack/solid-table": "^8.17.3",
+		"@tanstack/zod-form-adapter": "^0.19.5",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"@types/pluralize": "^0.0.33",
 		"aws4fetch": "^1.0.18",
 		"base58": "^2.0.1",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
+		"clsx": "^2.1.1",
 		"codejar": "^4.2.0",
 		"cookie-es": "^1.1.0",
 		"dexie": "^4.0.4",
-		"drizzle-orm": "^0.30.8",
+		"drizzle-orm": "^0.30.10",
 		"h3": "^1.11.1",
-		"hono": "^4.2.5",
+		"hono": "^4.3.7",
 		"input-otp": "^1.2.4",
-		"jose": "^5.2.4",
-		"lucia": "^3.1.1",
+		"jose": "^5.3.0",
+		"lucia": "^3.2.0",
 		"oslo": "^1.2.0",
 		"pluralize": "^8.0.0",
-		"prism-code-editor": "^3.3.0",
+		"prism-code-editor": "^3.3.1",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"solid-js": "^1.8.16",
-		"solid-sonner": "^0.2.6",
-		"stripe": "^15.3.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"solid-js": "^1.8.17",
+		"solid-sonner": "^0.2.7",
+		"stripe": "^15.7.0",
 		"superjson": "^2.2.1",
 		"tailwindcss": "^3.4.3",
 		"ts-pattern": "^5.1.1",
-		"vinxi": "=0.3.10",
+		"vinxi": "=0.3.11",
 		"xml2js": "^0.6.2",
-		"zod": "^3.22.5"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.202",
+		"@iconify/json": "^2.2.211",
 		"@microsoft/microsoft-graph-types": "^2.40.0",
 		"@tailwindcss/forms": "^0.5.7",
-		"@types/prismjs": "^1.26.3",
-		"@types/react": "^18.2.79",
-		"@types/react-dom": "^18.2.25",
+		"@types/prismjs": "^1.26.4",
+		"@types/react": "^18.3.2",
+		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.19",
 		"mysql2": "^3.9.7",
 		"postcss": "^8.4.38",
@@ -98,9 +97,9 @@
 		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7",
 		"unenv": "^1.9.0",
-		"unplugin-auto-import": "^0.17.5",
-		"unplugin-icons": "^0.18.5",
-		"vite": "^5.2.9",
+		"unplugin-auto-import": "^0.17.6",
+		"unplugin-icons": "^0.19.0",
+		"vite": "^5.2.11",
 		"vite-plugin-html": "^3.2.2",
 		"vite-plugin-solid": "^2.10.2",
 		"vite-tsconfig-paths": "^4.3.2"
