--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
           - 3306:3306
     env:
       DATABASE_URL: mysql://root:mysql@localhost:3306/mattrax
+      SKIP_ENV_VALIDATION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
