--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"doc": "pnpm --filter @mattrax/docs --",
 		"web": "pnpm --filter @mattrax/web --",
 		"infra": "pnpm --filter @mattrax/infra exec sst",
-		"db:push": "drizzle-kit push:mysql && bun run ./apps/web/src/db/rust.ts",
-		"db:gen": "drizzle-kit generate:mysql && bun run ./apps/web/src/db/rust.ts",
+		"db:push": "drizzle-kit push && bun run ./apps/web/src/db/rust.ts",
+		"db:gen": "drizzle-kit generate && bun run ./apps/web/src/db/rust.ts",
 		"db:studio": "drizzle-kit studio",
 		"db:rs": "bun run ./apps/web/src/db/rust.ts",
 		"typecheck": "tsc -b",
