--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,6 +26,9 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: latest
+
+      - name: Install
+        run: pnpm i
       
       - name: Build
         env:
@@ -48,7 +51,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: "arn:aws:iam::101829795063:role/mattrax-gh-actions"
           aws-region: us-east-1
@@ -61,7 +64,8 @@ jobs:
       - name: Install SST
         run: curl -fsSL https://ion.sst.dev/install | bash
 
-      - run: pnpm i
+      - name: Install
+        run: pnpm i
 
       - run: cd infra && sst deploy --stage brendonovich
         env:
