--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -83,4 +83,4 @@ jobs:
         env:
           CLOUDFLARE_ACCOUNT_ID: f02b3ef168fe64129e9941b4fb2e4dc1
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_KEY }}
-        run: pnpm landing exec wrangler pages deploy dist/
+        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing
